--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,13 @@
 <header>
-    <div class="container">
-        <h1>Escuela de Ciencias Físicas y Matemática</h1>
-        <p>Repositorio de Material Educativo</p>
-    </div>
+    <div style="display: flex; justify-content: center; align-items: center; text-align: center;">
+        <div style="display: flex; align-items: center; gap: 20px;">
+            <div class="logo">
+                <img src="/assets/icons/logoPUCE_04.png" alt="Logo PUCE" width="100">
+            </div>
+            <div class="text-content">
+                <h1>Escuela de Ciencias Físicas y Matemática</h1>
+                <p>Repositorio de Material Educativo</p>
+            </div>
+        </div>
+    </div>    
 </header>
