--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,12 @@
 <header>
-    <div style="display: flex; justify-content: center; align-items: center; text-align: center;">
-        <div style="display: flex; align-items: center; gap: 20px;">
+    <div style="display: flex; justify-content: center; ">
+        <div style="display: flex; align-items: center; gap: 25px;">
             <div class="logo">
-                <img src="/assets/icons/logoPUCE_04.png" alt="Logo PUCE" width="100">
+                <img src="/assets/icons/logoPUCE_04.png" alt="Logo PUCE" width="90">
             </div>
-            <div class="text-content">
-                <h1>Escuela de Ciencias Físicas y Matemática</h1>
-                <p>Repositorio de Material Educativo</p>
+            <div>
+                <h2 style="font-variant: small-caps; font-weight: bold; margin-bottom: 0.5rem;">Escuela de Ciencias Físicas y Matemática</h1>
+                <p style="font-size: 18px;">Repositorio de Material Educativo</p>
             </div>
         </div>
     </div>    
