arregal enlaces de Álgebra Lineal

--- a/_includes/recent-commits.html
+++ b/_includes/recent-commits.html
@@ -1,6 +1,6 @@
 <script>
     // Definir la URL base
-    const baseURL = "https://github.com/${repoOwner}/${repoName}/blob/main/";
+    const baseURL = `https://github.com/${repoOwner}/${repoName}/blob/main/`;
 
     // URL para obtener la lista de colaboradores
     const apiUrl = `https://api.github.com/repos/${repoOwner}/${repoName}/contributors`;
