--- a/assets/styles.css
+++ b/assets/styles.css
@@ -53,7 +53,7 @@ main {
 .card h5 {
     margin: 0.5rem 0;
     color: #134383;
-    font-weight: bold; 
+    font-weight: bold;
 }
 
 .card p {
@@ -82,7 +82,7 @@ main {
     background-color: white;
     padding: 10px;
     border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease;
     text-align: center;
     width: 300px;
@@ -98,13 +98,13 @@ main {
 
 .item:hover {
     transform: translateY(-5px);
-    box-shadow: 0 6px 12px rgba(0,0,0,0.15);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
 }
 
 h2 {
     color: #134383;
     text-align: center;
-    font-weight: bold; 
+    font-weight: bold;
     margin-bottom: 1.5rem;
 }
 
@@ -138,7 +138,8 @@ h2 {
     transform: rotateY(180deg);
 }
 
-.card-doc-front, .card-doc-back {
+.card-doc-front,
+.card-doc-back {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -170,7 +171,7 @@ h2 {
 }
 
 .card-doc-back ul {
-    padding-left: 10px; 
+    padding-left: 10px;
     margin-top: 1px;
 }
 
@@ -178,4 +179,9 @@ h2 {
     font-size: 0.9em;
     margin-bottom: 2px;
     color: #666;
+}
+
+
+.card-doc-front:hover {
+    transform: translateY(-7px);
 }
