--- a/assets/styles.css
+++ b/assets/styles.css
@@ -101,6 +101,25 @@ main {
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
 }
 
+.item-colab {
+    background-color: white;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease;
+    text-align: center;
+    width: 300px;
+}
+
+.item-colab p {
+    color: #666;
+}
+
+.item-colab:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+}
+
 h2 {
     color: #134383;
     text-align: center;
