arregla el baseurl

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
     <div style="display: flex; justify-content: center; ">
         <div style="display: flex; align-items: center; gap: 25px;">
             <div class="logo">
-                <img src="/assets/icons/logoPUCE_04.png" alt="Logo PUCE" width="90">
+                <img src="{{ site.baseurl }}/assets/icons/logoPUCE_04.png" alt="Logo PUCE" width="90">
             </div>
             <div>
                 <h2 style="font-variant: small-caps; font-weight: bold; margin-bottom: 0.5rem;">Escuela de Ciencias Físicas y Matemática</h1>
