--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,12 +7,14 @@
     <title>{{ page.title }} | {{ site.title }}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/styles.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
 </head>
 
 <body>
     {% include navbar.html %}
-    {% include header.html %}
+    {% if page.title == "Inicio" %}
+        {% include header.html %}
+    {% endif %}
     <main class="container">
         {{ content }}
     </main>
