--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #134383">
+    <img src="{{ site.baseurl }}/assets/icons/logoPUCE_04_b.png" alt="Logo PUCE" width="50" style="margin-right: 15px;">
     <a class="navbar-brand" href="{{ site.baseurl }}/">
-        <h1 style="color: white;">ECFM</h1>
+        <h1 style="color: white;"> ECFM</h1>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
